fix: update background color of kanban dropzone for better visibility

--- a/styles/board-desktop.css
+++ b/styles/board-desktop.css
@@ -176,7 +176,7 @@
     margin-bottom: 8px;
     margin-top: auto;
     border: 1px dashed var(--btn-compliance-links-font-color);
-    background: transparent;
+    background-color: var(--bg-light-gray);
 
 }
 
